create github pages

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
                             <div id="collapse2_10" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_10">
                                 <div class="panel-body p-4">
 
-                                    <p class="mbr-fonts-style panel-text display-4">Save the spae in your home for better things. Use our premium luggage on-demand when you need it.&nbsp;</p>
+                                    <p class="mbr-fonts-style panel-text display-4">Save the space in your home for better things. Use our premium luggage on-demand when you need it.&nbsp;</p>
                                 </div>
                             </div>
                         </div>
@@ -638,8 +638,7 @@
                             <div id="collapse3_10" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_10">
                                 <div class="panel-body p-4">
 
-                                    <p class="mbr-fonts-style panel-text display-4">
-                                        Luggage is insured so any damage to luggage is on us. You worry about your travels. If your luggage is damage during travel we will replace it right there right then.</p>
+                                    <p class="mbr-fonts-style panel-text display-4">Your luggage is insured. If your luggage is damage during travel, we will replace it with a new one.</p>
                                 </div>
                             </div>
                         </div>
@@ -670,7 +669,7 @@
                                 <div class="panel-body p-4">
 
                                     <p class="mbr-fonts-style panel-text display-4">
-                                        You enjoy your travels and let us do the worrying if anything happens to your luggage.</p>
+                                        You enjoy your travels and let us do the hard-work if anything happens to your luggage.</p>
                                 </div>
                             </div>
                         </div>
