create github pages

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8">
-                <h2 class="mbr-section-title pb-3 mbr-bold mbr-fonts-style align-left display-1">First choose your membership</h2>
+                <h2 class="mbr-section-title pb-3 mbr-bold mbr-fonts-style align-left display-1">Choose your membership</h2>
 
                 
                 <div class="media-container-row">
@@ -468,7 +468,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8">
-                <h2 class="mbr-section-title pb-3 mbr-bold mbr-fonts-style align-left display-1">Second Choose your Luggage</h2>
+                <h2 class="mbr-section-title pb-3 mbr-bold mbr-fonts-style align-left display-1">Choose your Luggage</h2>
 
                 
                 <div class="media-container-row">
