--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://mobirise.com">Beceome A Memeber Now</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://mobirise.com">Beceome A Member Now</a></div>
             </div>
         </div>
     </div>
